force-app/main/default/objects/ExecutionSettings__c/ExecutionSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Execution Settings</label>
</CustomObject>