force-app/main/default/objects/ExecutionSettings__c/fields/ByPassAllTriggers__c.field-meta.xml
<CustomField>
    <fullName>ByPassAllTriggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPass All Triggers</label>
    <type>Checkbox</type>
</CustomField>