force-app/main/default/objects/ExecutionSettings__c/fields/ByPassValidationRules__c.field-meta.xml
<CustomField>
    <fullName>ByPassValidationRules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPass Validation Rules</label>
    <type>Checkbox</type>
</CustomField>