force-app/main/default/objects/ExecutionSettings__c/fields/ByPassWorkflows__c.field-meta.xml
<CustomField>
    <fullName>ByPassWorkflows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPass Workflows</label>
    <type>Checkbox</type>
</CustomField>